--- a/Frontend/src/app/core/components/layouts/header/header.component.html
+++ b/Frontend/src/app/core/components/layouts/header/header.component.html
@@ -1,22 +1,31 @@
-
 <div class="row">
   <div class="navbar">
     <div class="col-5">
-      <a [routerLink]="['']" style="background-color: black"><h1>Asset Management</h1></a>
+      <a [routerLink]="['']" style="background-color: black"
+        ><h1>Asset Management</h1></a
+      >
     </div>
-    <div class="dropdown ">
-      <button class="dropbtn"><a [routerLink]="['/dashboard']" >Dashboard</a></button>
+    <div class="dropdown">
+      <button class="dropbtn">
+        <a [routerLink]="['/dashboard']"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-house-heart" viewBox="0 0 16 16">
+          <path d="M8 6.982C9.664 5.309 13.825 8.236 8 12 2.175 8.236 6.336 5.309 8 6.982Z"/>
+          <path d="M8.707 1.5a1 1 0 0 0-1.414 0L.646 8.146a.5.5 0 0 0 .708.707L2 8.207V13.5A1.5 1.5 0 0 0 3.5 15h9a1.5 1.5 0 0 0 1.5-1.5V8.207l.646.646a.5.5 0 0 0 .708-.707L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293L8.707 1.5ZM13 7.207V13.5a.5.5 0 0 1-.5.5h-9a.5.5 0 0 1-.5-.5V7.207l5-5 5 5Z"/>
+        </svg></a>
+      </button>
     </div>
     <div class="dropdown col-1">
-      <button class="dropbtn"><a (click)="assets()" >Assets</a></button>
+      <button class="dropbtn"><a (click)="assets()">Assets</a></button>
       <!-- <div class="content">
         <a (click)="assets()">Asset List</a>
         <a [routerLink]="['/dashboard/add-asset']">Add Asset</a>
         <a [routerLink]="['/dashboard/asset-transaction']">Assign Asset</a>
+        <a [routerLink]="['/dashboard/submit-asset']">Submit Asset</a>
       </div> -->
     </div>
     <div class="dropdown col-1">
-      <button class="dropbtn"><a [routerLink]="['/dashboard/show-venders']" >Vendors</a></button>
+      <button class="dropbtn">
+        <a [routerLink]="['/dashboard/show-venders']">Vendors</a>
+      </button>
       <!-- <div class="content">
         <a [routerLink]="['/dashboard/show-venders']">Vendor List</a>
         <a [routerLink]="['/dashboard/add-vendor']">Add Vendor</a>
@@ -24,6 +33,9 @@
     </div>
     <div class="col-">
       <a [routerLink]="['/dashboard/asset-transaction']">Assign Asset</a>
+    </div>
+    <div class="col-">
+      <a [routerLink]="['/dashboard/submit-asset']">Submit Asset</a>
     </div>
     <div class="right col-3">
       <ul *ngIf="!flag">
