--- a/GridView/src/app/app.component.html
+++ b/GridView/src/app/app.component.html
@@ -4,6 +4,8 @@
 <div style="text-align: center;">
   <button [routerLink]="['/assets/assets']" routerLinkActive="router-link-active">Show Assets</button>
   <button [routerLink]="['/assets/dashboard']" routerLinkActive="router-link-active">Go To Dashboard</button>
+  <div #appendTo class="append-container"></div>
+  
 </div>
 <router-outlet></router-outlet>
 <div style="text-align: center;"><h2>User Table</h2></div>
@@ -28,7 +30,7 @@
 
 
 <br/>
-
+<button (click)="show()">Show notification</button>
 <div style="text-align: center;"><h2>GridView (CRUD)</h2></div>
 
 <form novalidate #myForm="ngForm">
