--- a/Frontend/src/app/dashboard/components/Forms/asset-transaction/asset-transaction.component.css
+++ b/Frontend/src/app/dashboard/components/Forms/asset-transaction/asset-transaction.component.css
@@ -16,3 +16,14 @@
     height: 90px;
     width: 33%;
 }
+
+.left{
+    float: left;
+    height: 90px;
+    width: 49%;
+}
+.right{
+    float: right;
+    height: 90px;
+    width: 49%;
+}
