--- a/Frontend/src/app/dashboard/components/pages/assets/assets.component.html
+++ b/Frontend/src/app/dashboard/components/pages/assets/assets.component.html
@@ -12,7 +12,7 @@
             <i class="bi bi-patch-plus"></i>
           </button>
           <button type="submit" class="btn btn-info" (click)="editAsset()">
-            <i class="bi bi-pen"></i>
+            <i class="bi bi-pen-fill"></i>
           </button>
           <button type="submit" class="btn btn-danger" (click)="deleteAsset()">
             <i class="bi bi-trash"></i>
