--- a/Frontend/src/app/dashboard/components/Forms/add-asset/add-asset.component.html
+++ b/Frontend/src/app/dashboard/components/Forms/add-asset/add-asset.component.html
@@ -1,5 +1,5 @@
 <section class="container">
-  <div class="card">
+  <div class="card shadow p-3 mb-5 rounded">
     <div class="row">
       <div class="centre-text col-3">
         
