--- a/Frontend/src/app/dashboard/components/Forms/submit-asset/submit-asset.component.html
+++ b/Frontend/src/app/dashboard/components/Forms/submit-asset/submit-asset.component.html
@@ -5,7 +5,10 @@
       <div class="col-3">
         <div class="buttonMarj">
           <button type="submit" class="btn btn-danger" (click)="submitAsset()">
-            <i class="bi bi-trash">Submit asset</i>
+            <i class="bi bi-person-down"> Submit asset</i>
+          </button>
+          <button type="reset" class="btn btn-secondary" (click)="unSelectReadio()">
+            <i class="bi bi-bootstrap-reboot"></i>
           </button>
         </div>
       </div>
@@ -33,7 +36,7 @@
 
     <br />
     <table
-      class="table tableScroll"
+      class="table tableScroll mb-4"
       *ngIf="assignedAssets | filter : searchText as result"
     >
       <thead *ngIf="result.length != 0">
