--- a/Frontend/src/app/dashboard/components/pages/assets/assets.component.html
+++ b/Frontend/src/app/dashboard/components/pages/assets/assets.component.html
@@ -17,6 +17,9 @@
           <button type="submit" class="btn btn-danger" (click)="deleteAsset()">
             <i class="bi bi-trash"></i>
           </button>
+          <button type="reset" class="btn btn-secondary" (click)="unSelectReadio()">
+            <i class="bi bi-bootstrap-reboot"></i>
+          </button>
         </div>
       </div>
       <div class="col-3">
@@ -70,7 +73,7 @@
 
     <br />
     <table
-      class="table tableScroll"
+      class="table table-hover tableScroll mb-4"
       *ngIf="assets | filter : searchText as result"
     >
       <thead *ngIf="result.length != 0">
@@ -147,7 +150,7 @@
           </td>
           <td>
             <label class="custom-control-label" for="{{ i }}">{{
-              item.expiryDate | date : "MM-dd-yyyy"
+              item.expiryDate | date : "dd-MM-yyyy"
             }}</label>
           </td>
           <td>
