--- a/Frontend/src/app/dashboard/components/pages/unassigned-assets/unassigned-assets.component.html
+++ b/Frontend/src/app/dashboard/components/pages/unassigned-assets/unassigned-assets.component.html
@@ -5,7 +5,10 @@
         <div class="col-3">
           <div class="buttonMarj">
             <button type="submit" class="btn btn-success" (click)="assignAsset()">
-              <i class="bi bi-trash">Assign asset</i>
+              <i class="bi bi-pc-display"> Assign asset</i>
+            </button>
+            <button type="reset" class="btn btn-secondary" (click)="unSelectReadio()">
+              <i class="bi bi-bootstrap-reboot"></i>
             </button>
           </div>
         </div>
@@ -33,7 +36,7 @@
   
       <br />
       <table
-        class="table tableScroll"
+        class="table table-hover tableScroll mb-4"
         *ngIf="unassugnedAssets | filter : searchText as result"
       >
       <thead *ngIf="result.length != 0">
